--- a/app/src/main/res/layout/activity_data_entry.xml
+++ b/app/src/main/res/layout/activity_data_entry.xml
@@ -268,27 +268,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/verticalDivider" />
 
-    <View
-        android:id="@+id/horizontalDivider3"
-        android:layout_width="409dp"
-        android:layout_height="1dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginEnd="1dp"
-        android:background="?android:attr/listDivider"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lowMissAutoUpBtn" />
-
     <Button
         android:id="@+id/hiMakeTeleopDownBtn"
         android:layout_width="42dp"
         android:layout_height="42dp"
-        android:layout_marginTop="100dp"
         android:text="@string/decrement"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView"
         tools:ignore="TouchTargetSizeCheck"
-        tools:layout_editor_absoluteX="124dp" />
+        tools:layout_editor_absoluteX="114dp"
+        tools:layout_editor_absoluteY="458dp" />
 
     <View
         android:id="@+id/horizontalDivider2"
@@ -488,7 +475,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/hiAutoText"
+                android:id="@+id/hiAutoMissText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -497,17 +484,6 @@
                 android:textAlignment="center"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/autoTitleText" />
-
-            <TextView
-                android:id="@+id/hiAutoMissText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="@string/misses"
-                android:textAlignment="center"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/hiAutoText" />
 
             <Button
                 android:id="@+id/hiMissAutoUpBtn"
