--- a/app/src/main/res/layout/activity_data_entry.xml
+++ b/app/src/main/res/layout/activity_data_entry.xml
@@ -178,11 +178,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="2dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginEnd="39dp"
         android:text="Successful Attempts"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/divider2"
         app:layout_constraintTop_toBottomOf="@+id/hiTeleText2" />
 
@@ -568,10 +567,12 @@
         android:id="@+id/divider2"
         android:layout_width="1dp"
         android:layout_height="348dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="182dp"
         android:background="?android:attr/listDivider"
         android:visibility="visible"
-        tools:layout_editor_absoluteX="200dp"
-        tools:layout_editor_absoluteY="182dp"
+        app:layout_constraintStart_toEndOf="@id/hiAutoMakesText"
+        app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible" />
 
     <Button
@@ -726,47 +727,96 @@
         android:id="@+id/defPlaysText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="Defense Plays: "
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="539dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/horizontalDivider3" />
 
     <TextView
         android:id="@+id/defPlaysNumText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="8dp"
         android:text="0"
-        tools:layout_editor_absoluteX="110dp"
-        tools:layout_editor_absoluteY="539dp" />
+        app:layout_constraintStart_toEndOf="@+id/defPlaysText"
+        app:layout_constraintTop_toBottomOf="@+id/horizontalDivider3" />
 
     <Button
         android:id="@+id/defPlaysIncrementBtn"
         android:layout_width="41dp"
         android:layout_height="41dp"
+        android:layout_marginStart="29dp"
+        android:layout_marginTop="8dp"
         android:text="+"
-        tools:layout_editor_absoluteX="78dp"
-        tools:layout_editor_absoluteY="566dp" />
+        app:layout_constraintStart_toEndOf="@+id/defPlaysDecrementBtn"
+        app:layout_constraintTop_toBottomOf="@+id/defPlaysText" />
 
     <Button
         android:id="@+id/defPlaysDecrementBtn"
         android:layout_width="41dp"
         android:layout_height="41dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="-"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="566dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/defPlaysText" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="8dp"
         android:text="Climb attempt:"
-        tools:layout_editor_absoluteX="143dp"
-        tools:layout_editor_absoluteY="539dp" />
+        app:layout_constraintStart_toEndOf="@+id/defPlaysNumText"
+        app:layout_constraintTop_toBottomOf="@+id/horizontalDivider3" />
 
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="160dp"
         android:layout_height="17dp"
-        tools:layout_editor_absoluteX="242dp"
-        tools:layout_editor_absoluteY="539dp" />
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/horizontalDivider3" />
+
+    <Spinner
+        android:id="@+id/spinner3"
+        android:layout_width="160dp"
+        android:layout_height="17dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/spinner" />
+
+    <Spinner
+        android:id="@+id/spinner4"
+        android:layout_width="160dp"
+        android:layout_height="17dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintStart_toEndOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/spinner3" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="2dp"
+        android:text="Climb level:"
+        app:layout_constraintStart_toEndOf="@id/defPlaysNumText"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
+        android:text="Game result:"
+        app:layout_constraintStart_toEndOf="@id/defPlaysNumText"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
