--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,6 @@
     <dimen name="activity_horizontal_margin">16px</dimen>
     <dimen name="activity_vertical_margin">16px</dimen>
     <dimen name="fab_margin">16px</dimen>
-    <dimen name="text_box_width">256px</dimen>
+    <dimen name="text_box_width">215dp</dimen>
     <dimen name="help_button_width">96px</dimen>
 </resources>
